@@ -5,6 +5,7 @@ VUZE CHANGELOG
 
 FEATURE: UI   | Added "Column Setup" icon to the iconbar [amc1] 
 
+CHANGE: UI    | The comment icon column now displays a blank icon if there is no comment (rather than no icon) [amc1]
 CHANGE: Plug  | Client ID plugin is removed [amc1]
 
 2008.07.01 | Vuze 3.1.1.0
